fix spacing for sort buttons

--- a/flaskapp/static/style.css
+++ b/flaskapp/static/style.css
@@ -305,7 +305,7 @@ li{
 .sort-button{
   background-color: var(--button);
   color: white;
-  padding: 8px 20px;
+  padding: 8px 18px;
   margin: 8px 5px;
   border: none;
   border-radius: 4px;
